--- a/VueTest/2.模板语法.html
+++ b/VueTest/2.模板语法.html
@@ -29,7 +29,7 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
   <script>
-    new Vue({
+    const vm = new Vue({
       el:'#app',
       data:{
         msg:'<p>atguigu<p>',
@@ -44,6 +44,7 @@
         }
       }
     })
+    console.log(vm.$methods)
   </script>
 </body>
 </html>
