--- a/VueTest/7.列表渲染_过滤_排序.html
+++ b/VueTest/7.列表渲染_过滤_排序.html
@@ -6,6 +6,55 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div id="app">
+    <input type="text" v-model='searchName'><br>
+    <ul>
+      <li v-for="(p,index) in filterPersons" :key='index'>
+        {{index}}---{{p.name}}---{{p.age}}
+      </li>
+    </ul>
+    <button @click='setOrderType(1)'>年龄升序</button>
+    <button @click='setOrderType(2)'>年龄降序</button>
+    <button @click='setOrderType(0)'>原本顺序</button>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
+  <script>
+    new Vue({
+      el:'#app',
+      data:{
+        searchName:'',
+        orderType:0,
+        persons:[
+          {name:'jack',age:13},
+          {name:'rose',age:14},
+          {name:'bob',age:15},
+          {name:'alice',age:16}
+        ]
+      },
+      computed:{
+        filterPersons(){
+          const {persons,searchName,orderType} = this
+          let fPersons;//最终的数组
+          fPersons = persons.filter(p => p.name.indexOf(this.searchName) !== -1)
+          //排序
+          if(orderType !== 0){
+            fPersons.sort(function(a,b){
+              if(orderType ===1){
+                return a.age - b.age
+              }else{
+                return b.age - a.age
+              }
+            })
+          }
+          return fPersons;
+        },
+      },
+      methods:{
+        setOrderType(orderType){
+          this.orderType = orderType
+        }
+      }
+    })
+  </script>
 </body>
 </html>
